# softwareEng-demo

./: READMe.md  main.py  pyproject.toml
components/: local_device_info.py  recent_folders_list.py  remote_device_status.py
layouts/: file_management_page.py  start_page.py
ui/: hello.py  hello.ui
