[tool.poetry]
name = "softwareeng-demo"
version = "0.1.0"
description = ""
authors = ["flora <flora_chen2021@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.4"
pyqt6-tools = "^6.4.2.3.3"
pyqt6-fluent-widgets = "^1.7.0"
sip = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
